@@ -1,6 +1,7 @@
 2016-09-26  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/mainWindow.py: Created main window draft.
+	(MainApp.__createInputs): Added of inputs to modify algorithm (still in progress)
 
 	* mainGui.py: Created main script to handle the GUI.
 
